--- a/Trueque_Grupo35/Vista/bootstrap/index.html
+++ b/Trueque_Grupo35/Vista/bootstrap/index.html
@@ -212,10 +212,51 @@
 
 
   <!-- FOOTER -->
-  <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 2022 Solidaridad-Reciclaje-Trueque, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer>
+  <footer class="main-background">
+    <ol>
+        <li>
+          <a href="#">
+          <p>Ingresar</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Publicaciones</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Categorias</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Quienes somos</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Términos y condiciones</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Preguntas frecuentes</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Contacto</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+          <p>Sumate</p>
+          </a>
+        </li>
+    </ol>
+    <p>Truwebque</p>
+</footer>
 </main>
 
 
