Elimino codigo repetido, agrego hover al footer, y agrego letras en negrita al nombre del sitio en el footer.

--- a/Trueque_Grupo35/Vista/bootstrap/index.html
+++ b/Trueque_Grupo35/Vista/bootstrap/index.html
@@ -255,7 +255,7 @@
           </a>
         </li>
     </ol>
-    <p>Truwebque</p>
+    <p> <strong>TRU</strong>w<strong>E</strong>b<strong>QUE</strong></p>
 </footer>
 </main>
 
