Agrego pagina de registro, y enlazo desde el index

--- a/Trueque_Grupo35/Vista/bootstrap/index.html
+++ b/Trueque_Grupo35/Vista/bootstrap/index.html
@@ -55,7 +55,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/Vista/bootstrap/index.html">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Categoria</a>
@@ -88,7 +88,7 @@
           <div class="carousel-caption text-left">
             <h1>Sin dinero Con trueque</h1>
             <p></p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Registrate Hoy</a></p>
+            <p><a class="btn btn-lg btn-primary" href="/Vista/registro.html" role="button">Registrate Hoy</a></p>
           </div>
         </div>
       </div>
@@ -244,7 +244,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/Vista/registro.html">
           <p>Sumate</p>
           </a>
         </li>
