--- a/Trueque_Grupo35/Vista/index.html
+++ b/Trueque_Grupo35/Vista/index.html
@@ -8,23 +8,25 @@
   <title>TRUwEbQUE</title>
 
   <link rel="canonical" href="https://getbootstrap.comdocs/4.3/examples/carousel/">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Bootstrap core CSS -->
-  <link href="docs/4.3/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="bootstrap/docs/4.3/dist/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" href="docs/4.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-  <link rel="icon" href="docs/4.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="docs/4.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="manifest" href="docs/4.3/assets/img/favicons/manifest.json">
-  <link rel="mask-icon" href="docs/4.3/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-  <link rel="icon" href="docs/4.3/assets/img/favicons/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <meta name="msapplication-config" content="docs/4.3/assets/img/favicons/browserconfig.xml">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
+  <meta name="msapplication-config" content="bootstrap/docs/4.3/assets/img/favicons/browserconfig.xml">
   <meta name="theme-color" content="#563d7c">
-  <link href="estilos.css" rel="stylesheet" type="text/css">
+  <link href="bootstrap/estilos.css" rel="stylesheet" type="text/css">
+
+    
+  <link href="bootstrap/carousel.css" rel="stylesheet">
+  <script src="bootstrap/docs/4.3/dist/js/bootstrap.bundle.js"></script>
+
+
 
   <style>
     .bd-placeholder-img {
@@ -43,10 +45,8 @@
     }
   </style>
 
-
-  <!-- Custom styles for this template -->
-  <link href="carousel.css" rel="stylesheet">
 </head>
+
 
 <body>
 
@@ -60,7 +60,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/Vista/bootstrap/index.html">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/bootstrap/index.html">Inicio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Categoria</a>
@@ -79,6 +79,7 @@
 
   <main role="main">
     <section class="section-white">
+
       <div class="container">
 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -90,65 +91,63 @@
           <div class="carousel-inner">
             <div class="carousel-item item active">
               <img
-                src="Diseño sin título.png"
+                src="bootstrap/LOGO.png"
                 alt="...">
 
               <div class="container">
-                <div class="carousel-caption text-left ">
-                  <h1 style="color: #574b4a" ></h1>
+                <div class="carousel-caption">
                   <p></p>
-                  <p><a class="btn btn-lg btn-success" href="/Vista/registro.html" role="button">Registrate hoy</a></p>
+                  <p><a class="btn btn-lg btn-success" href="/registro.html" role="button">Registrate hoy</a></p>
                 </div>
               </div>
             </div>
             <div class="carousel-item item ">
               <img
-                src="INTERCAMBIO.jpg"
+                src="bootstrap/INTERCAMBIO.png"
                 alt="...">
 
               <div class="container ">
                 <div class="carousel-caption">
-                  <h1 style="color:#574b4a">Ayuda al planeta</h1>
                   <p></p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Conocé cómo</a></p>
+                  <p><a class="btn btn-lg btn-success" href="\Vista\publicacionnueva.html" role="button">¡Publica y comenzá a intercambiar!</a></p>
                 </div>
               </div>
             </div>
             <div class="carousel-item item">
               <img
-                src="ECONOMIA.jpg"
+                src="bootstrap\ECONOMIA.png"
                 alt="...">
 
               <div class="container">
                 <div class="carousel-caption ">
-                  <h1 style="color:#000000">¿Tenés cosas que no usas?</h1>
                   <p></p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">¡Intercambialas!</a></p>
+                  <p><a class="btn btn-lg btn-success" href="\Vista\info.html" role="button">Conocé más sobre cómo contribuir</a></p>
                 </div>
               </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="material-symbols-outlined">
+              arrow_back_ios
+              </span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="material-symbols-outlined">
+              arrow_forward_ios
+              </span>
             <span class="sr-only">Next</span>
           </a>
         </div>
       </div>
     </section>
-    <!-- Marketing messaging and featurettes
-  ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
+   
 
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
+    <div class="container-marketing">
       <div class="row">
         <div class="col-lg-4">
-          <img class="bd-placeholder-img rounded-circle" src="/Vista/bootstrap/electro.jpg" alt="" width="140"
+          <p></p>
+          <img class="bd-placeholder-img rounded-circle" src="bootstrap/electro.jpg" alt="" width="140"
             height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
             preserveAspectRatio="xMidYMid slice" role="img">
           <title>Placeholder</title>
@@ -157,9 +156,10 @@
           <h2>Electro</h2>
           <p>.</p>
           <p><a class="btn btn-secondary" href="#" role="button">Ingresar &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div>
         <div class="col-lg-4">
-          <img class="bd-placeholder-img rounded-circle" src="/Vista/bootstrap/objetos.jpg" alt="" width="140"
+          <p></p>
+          <img class="bd-placeholder-img rounded-circle" src="bootstrap/objetos.jpg" alt="" width="140"
             height="140" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
             preserveAspectRatio="xMidYMid slice" role="img">
           <title>Placeholder</title>
@@ -168,9 +168,10 @@
           <h2>Objetos</h2>
           <p>.</p>
           <p><a class="btn btn-secondary" href="#" role="button">Ingresar &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div>
         <div class="col-lg-4">
-          <img class="bd-placeholder-img rounded-circle" src="/Vista/bootstrap/ropa.jpg" alt="" width="140" height="140"
+          <p></p>
+          <img class="bd-placeholder-img rounded-circle" src="bootstrap/ropa.jpg" alt="" width="140" height="140"
             xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice"
             role="img">
           <title>Placeholder</title>
@@ -196,7 +197,7 @@
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-            src="/Vista/bootstrap/truque3.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+            src="bootstrap/truque3.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
             aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">
@@ -213,7 +214,7 @@
         </div>
         <div class="col-md-5 order-md-1">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-            src="/Vista/bootstrap/truque1.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+            src="bootstrap/truque1.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
             aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">
@@ -231,7 +232,7 @@
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-            src="/Vista/bootstrap/truque2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
+            src="bootstrap/truque2.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
             aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">
@@ -295,7 +296,6 @@
   </main>
 
 
-  <script src="docs/4.3/dist/js/bootstrap.bundle.js"></script>
 
 
 </body>
