--- a/Trueque_Grupo35/Vista/registro.html
+++ b/Trueque_Grupo35/Vista/registro.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/Trueque_Grupo35/Vista/bootstrap/docs/4.3/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/Trueque_Grupo35\Vista\bootstrap\docs\4.3\dist\css\bootstrap.css" rel="stylesheet">
     <link href="/Trueque_Grupo35/Vista/bootstrap/docs/4.3/dist/css/registro.css" rel="stylesheet">
 
     <!-- Favicons -->
@@ -162,20 +162,34 @@
 
     <!-- Grupo: Lugar de Residencia -->
     <div class="formulario__grupo-residencia" id="grupo__residencia">
-        <label  for="selectProvincias" class="formulario__label">Provincia</label>
+        <label  for="selectProvincias" class="formulario__label">Provincia de Residencia</label>
         <div class="formulario__grupo-input">
-        <select class=".formulario__select" id="selectProvincias">
+        <select class="formulario__select" id="selectProvincias">
           <option value="Elige una Provincia">Elige una provincia</option> </select>
           <i class="formulario__validacion-estado-select fas fa-times-circle"></i>
-        <p class="formulario__input-error">Debes seleccionar una Provincia y un Departamento.</p>
         </div>
-        <div class="formulario__grupo" id="grupo__residencia">
-        <label for= "selectDepartamentos" class="formulario__label-2">Departamento de Residencia: </label>
+        <p class="formulario__input-error">Debes seleccionar una Provincia.</p>
+    </div>
+
+        <div class="formulario__grupo-residencia" id="grupo__residencia2">
+        <label for= "selectDepartamentos" class="formulario__label">Departamento: </label>
         <div class="formulario__grupo-input">
-        <select disabled class=".formulario__select" id="selectDepartamentos">
-          <option value="Elige un Municipio">Elige un Departamento</option></select>
+        <select disabled class="formulario__select" id="selectDepartamentos">
+          <option value="Elige un Departamento">Elige un Departamento</option> </select>
+          <i class="formulario__validacion-estado-select fas fa-times-circle"></i>
         </div>
+        <p class="formulario__input-error">Debes seleccionar un Departamento.</p>
         </div>
+
+    
+    <!-- Grupo: Fecha de Nacimiento -->
+    <div class="formulario__grupo-fecha" id="grupo__fecha">
+      <label for="inputFechaNacimiento" class="formulario__label">Fecha de Nacimiento</label>
+      <div class="formulario__grupo-input">
+        <input type="date" class="formulario__date" id="inputFechaNacimiento" min="1904-02-11" max="2022-11-10">
+        <i class="formulario__validacion-estado-select fas fa-times-circle"></i>
+      </div>
+      <p class="formulario__input-error">Elige una fecha de nacimiento valida.</p>
     </div>
 
     <!-- Grupo: Terminos y Condiciones -->
