info.html-registro.html: Modificaciones en la navbar (removido inicio, el logo lleva a inicio, removido carrito), Modificaciones en los footer (agregados links a todos los elementos, quienes somos y contacto llevan a la pagina de wordpress) y otras modificaciones menores

--- a/Frontend/Vista/info.html
+++ b/Frontend/Vista/info.html
@@ -51,21 +51,15 @@
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">TRUWEBQUE</a>
+      <a class="navbar-brand" href="index.html">TRUWEBQUE</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Categoria</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Carrito</a>
+            <a class="nav-link" href="categoria.html">Categoria</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -90,7 +84,7 @@
       
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-              <p>Hola Buenas, Aqui Nomas ando mirando</p>
+              <a href="http://www.truwebque.tk/"> Conoce a los developers haciendo click aquí</a>
             </div>
           </div>
         </div>
@@ -166,22 +160,22 @@
     <footer class="main-background">
       <ol>
         <li>
-          <a href="#">
+          <a href="login.html">
             <p>Ingresar</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="publicaciones.html">
             <p>Publicaciones</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="categoria.html">
             <p>Categorias</p>
           </a>
         </li>
         <li>
-            <a href="info.html">
+            <a href="http://www.truwebque.tk/">
             <p>Quienes somos</p>
           </a>
         </li>
@@ -196,7 +190,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="http://www.truwebque.tk/contacto/">
             <p>Contacto</p>
           </a>
         </li>
