--- a/Frontend/Vista/registro.html
+++ b/Frontend/Vista/registro.html
@@ -49,20 +49,14 @@
     
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">TRUWEBQUE</a>
+    <a class="navbar-brand" href="index.html">TRUWEBQUE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="bootstrap/o35index.html">Inicio <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Categoria</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Carrito</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
@@ -99,12 +93,14 @@
   </div><!-- /.container -->
 
   <!-- /Aqui empieza el formulario -->
+
   <form action="" class="formulario" id="formulario">
+
     <!-- Grupo: Usuario -->
     <div class="formulario__grupo" id="grupo__usuario">
       <label for="usuario" class="formulario__label">Usuario</label>
       <div class="formulario__grupo-input">
-        <input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="john123">
+        <input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="juan86">
         <i class="formulario__validacion-estado fas fa-times-circle"></i>
       </div>
       <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
@@ -114,7 +110,7 @@
     <div class="formulario__grupo" id="grupo__nombre">
       <label for="nombre" class="formulario__label">Nombre</label>
       <div class="formulario__grupo-input">
-        <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="John Doe">
+        <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Juan Medina">
         <i class="formulario__validacion-estado fas fa-times-circle"></i>
       </div>
       <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
@@ -154,7 +150,7 @@
     <div class="formulario__grupo" id="grupo__telefono">
       <label for="telefono" class="formulario__label">Teléfono</label>
       <div class="formulario__grupo-input">
-        <input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="4491234567">
+        <input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="351-2315529">
         <i class="formulario__validacion-estado fas fa-times-circle"></i>
       </div>
       <p class="formulario__input-error">El telefono solo puede contener numeros y el maximo son 14 dígitos.</p>
@@ -243,7 +239,7 @@
     </div>
   </form>
 
-
+  <hr class="featurette-divider">
 
 
 
@@ -251,42 +247,42 @@
   <footer class="main-background">
     <ol>
         <li>
-          <a href="#">
+          <a href="login.html">
           <p>Ingresar</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="publicaciones.html">
           <p>Publicaciones</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="categoria.html">
           <p>Categorias</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="http://www.truwebque.tk/">
           <p>Quienes somos</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="info.html">
           <p>Términos y condiciones</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="info.html">
           <p>Preguntas frecuentes</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="http://www.truwebque.tk/contacto/">
           <p>Contacto</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="registro.html">
           <p>Sumate</p>
           </a>
         </li>
