login.html editada y login.css creados. Editados los links de index.html (root para github pages)

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
             <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Categoria</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Carrito</a>
+            <a class="nav-link" href="/Frontend/Vista/categoria.html">Categoria</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -250,17 +247,17 @@
     <footer class="main-background">
       <ol>
         <li>
-          <a href="#">
+          <a href="/Frontend/Vista/login.html">
             <p>Ingresar</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/Frontend/Vista/publicaciones.html">
             <p>Publicaciones</p>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/Frontend/Vista/categoria.html">
             <p>Categorias</p>
           </a>
         </li>
@@ -280,7 +277,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="http://www.truwebque.tk/contacto/"">
             <p>Contacto</p>
           </a>
         </li>
