corregido un error en el index.html

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </a>
         </li>
         <li>
-          <a href="http://www.truwebque.tk/contacto/"">
+          <a href="http://www.truwebque.tk/contacto/">
             <p>Contacto</p>
           </a>
         </li>
