--- a/Frontend/Vista/info.html
+++ b/Frontend/Vista/info.html
@@ -207,7 +207,7 @@
           </a>
         </li>
         <li>
-            <a href="#>
+            <a href="#">
             <p>Quienes somos</p>
           </a>
         </li>
@@ -222,7 +222,7 @@
           </a>
         </li>
         <li>
-          <a href="#>
+          <a href="#">
             <p>Contacto</p>
           </a>
         </li>
